--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, reiciendis perspiciatis dolorum dignissimos adipisci sequi aperiam facere odit eveniet nobis in quia, commodi laborum culpa voluptatibus repudiandae hic distinctio neque.</p>
 </body>
 </html>
