Noice button added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, reiciendis perspiciatis dolorum dignissimos adipisci sequi aperiam facere odit eveniet nobis in quia, commodi laborum culpa voluptatibus repudiandae hic distinctio neque.</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>Hello World!</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, reiciendis perspiciatis dolorum dignissimos adipisci sequi aperiam facere odit eveniet nobis in quia, commodi laborum culpa voluptatibus repudiandae hic distinctio neque.</p>
+        <button><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank"> NOICE </a></button>
+    </body>
 </html>
